FIPS-3572/FIPS-3858 :: Changes after CodeReview, PMOTest update